[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "testwright"
version = "2.0.0"
requires-python = ">=3.9"
dependencies = ["langgraph", "httpx"]

[project.scripts]
testwright = "testwright.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["testwright*"]
